tests/positive/basic/import_basic/input.ci
import "utils.ci";
void main(string[] args) {
    print(toString(answer()) + "\n");
}
