tests/negative/lexical/imported_unknown_character/input.ci
import "bad.ci";
void main(string[] args) {}
